# libtfmpvalue

./: CMakeLists.txt  Makefile  README.md
include/: Matrix.h  Parsers.h
src/: ArgumentException.cpp  FileException.cpp  Matrix.cpp  ParseException.cpp  Parsers.cpp  TFMpvalue.cpp
